--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -49,10 +49,12 @@ h5, .h5 {
 }
 
 .cv-content {
+    h2 {
+        font-size: 2.5rem;
+        font-weight: 700;
+    }
     h3 {
-        font-size: 2.6rem;
-        text-align: center;
-        text-transform: uppercase;
+        font-size: 1.7rem;
     }
     h4 {
         text-transform: uppercase;
