--- a/sass/layout/sections/_portfolio.scss
+++ b/sass/layout/sections/_portfolio.scss
@@ -20,6 +20,7 @@
             padding: 2rem 1rem 1.5rem 1rem;
             border-top-left-radius: 0.5rem;
             border-top-right-radius: 0.5rem;
+            text-align: center;
             cursor: pointer;
             img {
                 width: 80%;
