--- a/sass/layout/sections/_portfolio.scss
+++ b/sass/layout/sections/_portfolio.scss
@@ -20,6 +20,7 @@
             padding: 2rem 1rem 1.5rem 1rem;
             border-top-left-radius: 0.5rem;
             border-top-right-radius: 0.5rem;
+            border-top: 0.3rem transparent solid;
             text-align: center;
             cursor: pointer;
             img {
@@ -32,6 +33,9 @@
             }
             &:hover, &:focus {
                 border-top: 0.3rem $portfolio-dark solid;
+                img {
+                    box-shadow: 3px 3px 9px $color-shadow;
+                }
             }
         }
     }
