transition sections on scroll

--- a/sass/layout/sections/_skills.scss
+++ b/sass/layout/sections/_skills.scss
@@ -37,6 +37,9 @@
         margin-top: -2rem;
         opacity: 0;
         transition: 250ms ease;
+        li {
+            text-align: center;
+        }
         &.active {
             opacity: 1;
         }
