--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -22,6 +22,11 @@ main {
         height: max-content;
         padding: 4rem 8rem 6rem 12rem;
         scroll-snap-align: start;
+        opacity: 0;
+        transition: 350ms ease-in;
+        &.active {
+            opacity: 1;
+        }
         @media screen and (max-width: 985px) {
             padding: 8rem 3rem 3rem 3rem;
         }
