--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -29,6 +29,7 @@ main {
         }
         @media screen and (max-width: 985px) {
             padding: 8rem 3rem 3rem 3rem;
+            opacity: 1;
         }
     }
 }
